stylize the app list

--- a/bower.json
+++ b/bower.json
@@ -10,6 +10,7 @@
 		"fxos-mvc": "git@github.com:fxos/mvc.git",
 		"gaia-theme": "gaia-components/gaia-theme",
 		"gaia-header" : "gaia-components/gaia-header",
-		"gaia-list": "gaia-components/gaia-list"
+		"gaia-list": "gaia-components/gaia-list",
+		"gaia-button": "gaia-components/gaia-button"
 	}
 }
