WIP adding gaia-confirm

--- a/bower.json
+++ b/bower.json
@@ -12,6 +12,7 @@
 		"gaia-header" : "gaia-components/gaia-header",
 		"gaia-list": "gaia-components/gaia-list",
 		"gaia-button": "gaia-components/gaia-button",
-		"gaia-fonts": "gaia-components/gaia-fonts"
+		"gaia-fonts": "gaia-components/gaia-fonts",
+		"gaia-confirm": "gaia-components/gaia-confirm"
 	}
 }
