--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,7 @@
 		"fxos-mvc": "git@github.com:fxos/mvc.git",
 		"gaia-theme": "gaia-components/gaia-theme",
 		"gaia-header" : "gaia-components/gaia-header",
-		"gaia-list": "gaia-components/gaia-list#0.1.1",
+		"gaia-list": "gaia-components/gaia-list",
 		"gaia-button": "gaia-components/gaia-button",
 		"gaia-fonts": "gaia-components/gaia-fonts",
 		"gaia-dialog": "gaia-components/gaia-dialog"
