--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,7 @@
     "gaia-button": "gaia-components/gaia-button",
     "gaia-fonts": "gaia-components/gaia-fonts",
     "gaia-dialog": "gaia-components/gaia-dialog",
-    "gaia-tabs": "gaia-components/gaia-tabs"
+    "gaia-tabs": "gaia-components/gaia-tabs",
+    "gaia-sub-header": "gaia-components/gaia-sub-header"
   }
 }
