--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,7 @@
     "gaia-list": "gaia-components/gaia-list#0.1.7",
     "gaia-button": "git@github.com:mikehenrty/gaia-button.git#height-font-vars",
     "gaia-fonts": "gaia-components/gaia-fonts#0.2.1",
-    "gaia-dialog": "gaia-components/gaia-dialog#c7f52d095c59b4f99e34b5b9316882c2011d97a8",
+    "gaia-dialog": "gaia-components/gaia-dialog#0.0.1",
     "gaia-tabs": "gaia-components/gaia-tabs#0.0.1",
     "gaia-sub-header": "gaia-components/gaia-sub-header#0.3.1"
   }
