--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,7 @@
     "gaia-theme": "gaia-components/gaia-theme#0.4.5",
     "gaia-header" : "gaia-components/gaia-header#0.7.0",
     "gaia-list": "gaia-components/gaia-list#0.1.7",
-    "gaia-button": "git@github.com:mikehenrty/gaia-button.git#height-font-vars",
+    "gaia-button": "gaia-components/gaia-button#0.0.3",
     "gaia-fonts": "gaia-components/gaia-fonts#0.2.1",
     "gaia-dialog": "gaia-components/gaia-dialog#0.0.1",
     "gaia-tabs": "gaia-components/gaia-tabs#0.0.1",
