Bug 1157530 - Add an |npm run build| command and update fxos-build dependency. r=mhenretty

--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
     "type": "git",
     "url": "git@github.com:fxos/directory.git"
   },
+  "scripts": {
+    "build": "gulp build"
+  },
   "license": "MPL",
   "dependencies": {
-    "fxos-build": "0.3.x",
+    "fxos-build": "0.7.x",
     "gulp": "3.8.x"
   }
 }
