--- a/app/apps.json
+++ b/app/apps.json
@@ -66,5 +66,15 @@
       "type": "hosted",
       "url": "https://github.com/fxos/dialer",
       "revision": "835af6ccf608a51bc87711d1c40fc4f33a1fc12b"
+    },
+    "http://sfoster.github.io/fxos-close-all-addon/dist/manifest.webapp": {
+      "manifestURL": "http://sfoster.github.io/fxos-close-all-addon/dist/manifest.webapp",
+      "name": "Close All",
+      "description": "An Add-on to close all apps from the task manager",
+      "icon": "http://sfoster.github.io/fxos-close-all-addon/dist/icons/cameo-scythe-128.png",
+      "author": "Sam Foster",
+      "type": "hosted",
+      "url": "https://github.com/sfoster/fxos-close-all-addon",
+      "revision": "c3751c34f342e32ad07fe1e0b4e10d5aaef5bd04"
     }
 }
