--- a/app/apps.json
+++ b/app/apps.json
@@ -20,13 +20,13 @@
       "revision": "7096c0545980e250ee5be505b746421ffb9b19ce"
     },
     "http://mikehenrty.github.io/fxos-cracked/manifest.webapp": {
-      "manifestURL": "https://mikehenrty.github.io/fxos-cracked/manifest.webapp",
+      "manifestURL": "http://mikehenrty.github.io/fxos-cracked/manifest.webapp",
       "name": "cracked",
       "description": "A virtual cracked screen for your FirefoxOS device.",
       "icon": "http://mikehenrty.github.io/fxos-cracked/style/icons/128.png",
       "author": "David Flanagan",
       "type": "addon",
-      "url": "http://github.com/mikehenrty/fxos-cracked",
+      "url": "https://github.com/mikehenrty/fxos-cracked",
       "revision": "16016c86f464c23e0465b22d43c08f52c1cc7349"
     },
     "https://callahad.github.io/disconnected-ensemble-src/src/manifest.webapp": {
@@ -58,7 +58,7 @@
       "url": "https://github.com/fxos/camera",
       "revision": "8b5a7d9061a0d0210f24ff253110a8ce935104ca"
     },
-    "https//fxos.github.io/dialer/dist/app/manifest.webapp": {
+    "http://fxos.github.io/dialer/dist/app/manifest.webapp": {
       "manifestURL": "http://fxos.github.io/dialer/dist/app/manifest.webapp",
       "name": "New Dialer",
       "description": "A replacement for the built-in dialer app.",
