--- a/app/apps.json
+++ b/app/apps.json
@@ -115,5 +115,15 @@
       "type": "addon",
       "url": "https://github.com/begeeben/fxos-facebook-menubar",
       "revision": "39430a5564e48c7cd4ab5d574db3c299eda02f08"
+    },
+    "https://john-hu.github.io/kill-all-active-apps/manifest.webapp": {
+      "manifestURL": "https://john-hu.github.io/kill-all-active-apps/manifest.webapp",
+      "name": "Kill Actives",
+      "description": "Add a button to kill all active apps",
+      "icon": "http://john-hu.github.io/kill-all-active-apps/icons/128.png",
+      "author": "John Hu",
+      "type": "addon",
+      "url": "https://github.com/john-hu/kill-all-active-apps",
+      "revision": "0f6a5a76c9a9d69527b0bd751611b21aac86a117"
     }
 }
