--- a/app/apps.json
+++ b/app/apps.json
@@ -125,5 +125,15 @@
       "type": "addon",
       "url": "https://github.com/john-hu/kill-all-active-apps",
       "revision": "0f6a5a76c9a9d69527b0bd751611b21aac86a117"
+    },
+    "https://yzen.github.io/fxos-user-hub/manifest.webapp": {
+      "manifestURL": "https://yzen.github.io/fxos-user-hub/manifest.webapp",
+      "name": "User Hub",
+      "icon": "https://yzen.github.io/fxos-user-hub/icons/user.png",
+      "description": "User hub for user preferences",
+      "author": "Yura Zenevich",
+      "type": "addon",
+      "url": "https://github.com/yzen/fxos-user-hub",
+      "revision": "ab558b02058553d8b58fd5c3a9104462de054fe1"
     }
 }
