--- a/app/apps.json
+++ b/app/apps.json
@@ -175,5 +175,15 @@
       "type": "addon",
       "url": "https://github.com/eeejay/responsive-irccloud",
       "revision": "9c754fd49c4ebb878c4f370acc048605f4904f33"
+    },
+    "https://arcturus.github.io/more-icons-addon/manifest.webapp": {
+      "manifestURL": "https://arcturus.github.io/more-icons-addon/manifest.webapp",
+      "name": "Bookmarks more-icons",
+      "description": "Get more icon choices when adding a webpage to your homescreen. When saving a bookmar, click on the icon to show alternatives (if available)",
+      "icon": "https://arcturus.github.io/more-icons-addon/icon.png",
+      "author": "Francisco Jordano",
+      "type": "addon",
+      "url": "https://arcturus.github.io/more-icons-addon/manifest.webapp",
+      "revision": "8b7bdbbf676d021e873c922d6092766d486eaf2b"
     }
 }
