--- a/app/apps.json
+++ b/app/apps.json
@@ -175,5 +175,15 @@
       "type": "addon",
       "url": "https://github.com/eeejay/responsive-irccloud",
       "revision": "9c754fd49c4ebb878c4f370acc048605f4904f33"
+    },
+    "https://shinglyu.github.io/fxos-back-button/manifest.webapp": {
+      "manifestURL": "https://shinglyu.github.io/fxos-back-button/manifest.webapp",
+      "name": "Back Button",
+      "description": "Add back button (and show window button) to the software home button bar",
+      "icon": "https://shinglyu.github.io/fxos-back-button/icons/icon.png",
+      "author": "Shing Lyu",
+      "type": "addon",
+      "url": "https://github.com/shinglyu/fxos-back-button",
+      "revision": "d99c9552252536116f9686f619e2a8d71ac4d389"
     }
 }
