--- a/app/apps.json
+++ b/app/apps.json
@@ -205,5 +205,15 @@
       "type": "addon",
       "url": "https://github.com/xeonchen/fxos-line-fixer",
       "revision": "4c93314c2fa985aa41316f9423f06090dec059d4"
+    },
+    "https://hobinjk.github.io/minimal-home-button/manifest.webapp": {
+      "manifestURL": "https://hobinjk.github.io/minimal-home-button/manifest.webapp",
+      "name": "Minimal Home Button",
+      "description": "Home buttons should be barely seen and never heard.",
+      "icon": "https://hobinjk.github.io/minimal-home-button/icons/128.png",
+      "author": "James Hobin",
+      "type": "addon",
+      "url": "https://github.com/hobinjk/minimal-home-button",
+      "revision": "3fd1000abb982d983828b8d8494b1cab38186549"
     }
 }
