Update addon description and revision.

--- a/app/apps.json
+++ b/app/apps.json
@@ -219,11 +219,11 @@
     "https://elin-moco.github.io/fxos-addon-sound-switch/manifest.webapp": {
       "manifestURL": "https://elin-moco.github.io/fxos-addon-sound-switch/manifest.webapp",
       "name": "Sound Switch",
-      "description": "Toggle sounds on and off in utilities tray.",
+      "description": "Toggle sounds on and off in utilities tray. Only media volume and ringtones/notifications volume would be affected.",
       "icon": "https://elin-moco.github.io/fxos-addon-sound-switch/icons/sound.png",
       "author": "Eddie Lin",
       "type": "addon",
       "url": "https://github.com/elin-moco/fxos-addon-sound-switch",
-      "revision": "99fc455177a4ebcadf8853f75f9f3964dc40562d"
+      "revision": "7c78833d9e9ddb15fd65225bb08593232719efc4"
     }
 }
