--- a/app/apps.json
+++ b/app/apps.json
@@ -215,5 +215,15 @@
       "type": "addon",
       "url": "https://arcturus.github.io/more-icons-addon/manifest.webapp",
       "revision": "8b7bdbbf676d021e873c922d6092766d486eaf2b"
+    },
+    "https://elin-moco.github.io/fxos-addon-draggable-home-btn/manifest.webapp": {
+      "manifestURL": "https://elin-moco.github.io/fxos-addon-draggable-home-btn/manifest.webapp",
+      "name": "Draggable Home Button",
+      "description": "Adds a draggable home button to the screen.",
+      "icon": "https://elin-moco.github.io/fxos-addon-draggable-home-btn/icons/home.png",
+      "author": "Eddie Lin",
+      "type": "addon",
+      "url": "https://github.com/elin-moco/fxos-addon-draggable-home-btn",
+      "revision": "bbdea108192b6e5912c7937d9af34fdf5d75949f"
     }
 }
