Added yellow mask addon.

--- a/app/apps.json
+++ b/app/apps.json
@@ -215,5 +215,15 @@
       "type": "addon",
       "url": "https://arcturus.github.io/more-icons-addon/manifest.webapp",
       "revision": "8b7bdbbf676d021e873c922d6092766d486eaf2b"
+    },
+    "https://elin-moco.github.io/fxos-addon-yellow-mask/manifest.webapp": {
+      "manifestURL": "https://elin-moco.github.io/fxos-addon-yellow-mask/manifest.webapp",
+      "name": "Yellow Mask",
+      "description": "Adds a yellow mask to protect your eyes.",
+      "icon": "https://elin-moco.github.io/fxos-addon-yellow-mask/icons/glasses.png",
+      "author": "Eddie Lin",
+      "type": "addon",
+      "url": "https://github.com/elin-moco/fxos-addon-yellow-mask",
+      "revision": "19ba27c113305ca38d26cf723a936bd6ef194dba"
     }
 }
